# tensorflow-cmake

./: .gitignore  CMakeLists.txt  README TOO.md  README.md  README_TF.md  appveyor.yml  configure.py  make.bat
cmake/patches/nsync/: CMakeLists.txt
cmake/scripts/: configure.bat  configure_gpu.bat  make.bat
tensorflow/: CMakeLists.txt
tensorflow/c/: CMakeLists.txt
tensorflow/cc/: CMakeLists.txt
tensorflow/cc/tutorials/: CMakeLists.txt
tensorflow/core/: CMakeLists.txt
tensorflow/core/distributed_runtime/: CMakeLists.txt
tensorflow/examples/label_image/: CMakeLists.txt
tensorflow/python/: CMakeLists.txt  python_modules.txt  python_protos.txt  python_protos_cc.txt  python_sanity_test.py
tensorflow/stream_executor/: CMakeLists.txt
tensorflow/tools/: CMakeLists.txt
